--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 <body id="page-landing">
 
     <div id="container">
-        
+        <div id="container">
+            <h1>Proffy</h1>
+            <p>Sua plataforma de estudos online</p>
+            <a href="#">Link</a>
+            <img src="" alt="logo">
+            <button>Estudar</button>
+            <button>Dar Aulas</button>
+    
+        </div>
     </div>
 </body>
 </html>
