--- a/index.html
+++ b/index.html
@@ -5,22 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./Syles/main.css">
+    <link rel="stylesheet" href="./Syles/partials/page-landing.css">
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
 </head>
 <body id="page-landing">
 
     <div id="container">
-        <div id="container">
-            <h1>Proffy</h1>
-            <p>Sua plataforma de estudos online</p>
-            <a href="#">Link</a>
-            <img src="" alt="logo">
-            <button>Estudar</button>
-            <button>Dar Aulas</button>
-    
+
+        <div class="logo-container">
+            <img src="/nlw/images/logo.svg" alt="">
+            <h2>Sua plataforma de estudos online</h2>
         </div>
+
+        <img class="hero-image" src="./nlw/images/landing.svg" alt="Plataforma de Estudos">
+
+        <div class="buttons-container">
+            <a class="study" href="/study.html">
+                <img src="./nlw/images/icons/study.svg" alt="Estudar">
+                Estudar
+            </a>
+
+            <a class="give-classes" href="/give-classes.html">
+                <img src="./nlw/images/icons/give-classes.svg" alt="Dar Aulas">
+                Dar Aulas
+            </a>
+        </div>
+
+        <p class="total-connections">
+            Total de conexões já realizadas
+            <img src="./nlw/images/icons/purple-heart.svg" alt="Coração roxo">
+        </p>
+
     </div>
 </body>
 </html>
