--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ept-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="theme-color" content="#8257E5">
+    
+    <title>Proffy</title>
+
+    <link rel="shortcut icon" href="./nlw/images/favicon.png" type="image/png">
 
     <link rel="stylesheet" href="./Syles/main.css">
     <link rel="stylesheet" href="./Syles/partials/page-landing.css">
+
+    
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
 </head>
@@ -15,7 +21,7 @@
     <div id="container">
 
         <div class="logo-container">
-            <img src="/nlw/images/logo.svg" alt="">
+            <img src="/nlw/images/logo.svg" alt="Proffy">
             <h2>Sua plataforma de estudos online</h2>
         </div>
 
