create src and restructuring of folders

--- a/src/give-classes.html
+++ b/src/give-classes.html
@@ -7,12 +7,12 @@
     
     <title>Proffy</title>
 
-    <link rel="shortcut icon" href="./nlw/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="../public/images/favicon.png" type="image/png">
 
-    <link rel="stylesheet" href="./Syles/main.css">
-    <link rel="stylesheet" href="./Syles/partials/header.css">
-    <link rel="stylesheet" href="./Syles/partials/forms.css">
-    <link rel="stylesheet" href="./Syles/partials/page-give-classes.css">
+    <link rel="stylesheet" href="../public/styles/main.css">
+    <link rel="stylesheet" href="../public/styles/partials/header.css">
+    <link rel="stylesheet" href="../public/styles/partials/forms.css">
+    <link rel="stylesheet" href="../public/styles/partials/page-give-classes.css">
 
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
@@ -26,10 +26,10 @@
 
         <header class="page-header">
             <div class="top-bar-container">
-                <a href="/index.html">
-                    <img src="/nlw/images/icons/back.svg" alt="">
+                <a href="index.html">
+                    <img src="../public/images/icons/back.svg" alt="">
                 </a>
-                <img src="/nlw/images/logo.svg" alt="">
+                <img src="../public/images/logo.svg" alt="">
             </div>
 
             <div class="header-content">
@@ -125,7 +125,7 @@
            
            <footer>
                <p>
-                <img src="./nlw/images/icons/warning.svg" alt="Aviso Importante">
+                <img src="../public/images/icons/warning.svg" alt="Aviso Importante">
                 Importante! <br> <!-- serve para dar uma quebra de linha -->
                 Preencha todos os dados
                 </p>
