--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
     
     <title>Proffy</title>
 
-    <link rel="shortcut icon" href="./nlw/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="../public/images/favicon.png" type="image/png">
 
-    <link rel="stylesheet" href="./Syles/main.css">
-    <link rel="stylesheet" href="./Syles/partials/page-landing.css">
+    <link rel="stylesheet" href="../public/styles/main.css">
+    <link rel="stylesheet" href="../public/styles/partials/page-landing.css">
 
     
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
@@ -21,27 +21,27 @@
     <div id="container">
 
         <div class="logo-container">
-            <img src="/nlw/images/logo.svg" alt="Proffy">
+            <img src="../public/images/logo.svg" alt="Proffy">
             <h2>Sua plataforma de estudos online</h2>
         </div>
 
-        <img class="hero-image" src="./nlw/images/landing.svg" alt="Plataforma de Estudos">
+        <img class="hero-image" src="../public/images/landing.svg" alt="Plataforma de Estudos">
 
         <div class="buttons-container">
-            <a class="study" href="/study.html">
-                <img src="./nlw/images/icons/study.svg" alt="Estudar">
+            <a class="study" href="./study.html">
+                <img src="../public/images/icons/study.svg" alt="Estudar">
                 Estudar
             </a>
 
-            <a class="give-classes" href="/give-classes.html">
-                <img src="./nlw/images/icons/give-classes.svg" alt="Dar Aulas">
+            <a class="give-classes" href="give-classes.html">
+                <img src="../public/images/icons/give-classes.svg" alt="Dar Aulas">
                 Dar Aulas
             </a>
         </div>
 
         <p class="total-connections">
             Total de conexões já realizadas
-            <img src="./nlw/images/icons/purple-heart.svg" alt="Coração roxo">
+            <img src="../public/images/icons/purple-heart.svg" alt="Coração roxo">
         </p>
 
     </div>
